Added new API's and changed uid to respective id
